# minke

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/workflows/: docs.yml  pypi.yml
.travis/: run_tests.sh  setup_environment.sh
docs/: Makefile  burst.rst  cbc.rst  conf.py  distributions.rst  docker.rst  doctest-examples.rst  hardware-injections.rst  index.rst  installation.rst  make.bat  minke.models.rst  minke.rst  minki.rst  modules.rst  noise.rst  numerical.rst  other-software.rst  quickstart.rst  ringdowns.rst  software-injections.rst  tutorial-SNR-threshold.rst  tutorial-asimov.rst  tutorial-editing.rst  tutorial-hardware.rst  tutorial-noise-psd.rst  tutorial-supernova.rst  tutorial.rst  usage.rst
docs/_templates/: layout.html
examples/: 0-quickstart.py  1-seobnrv3.py  2-noise.py  3-injection.py  4-make-injection.py  5-sinegaussian.py
minke/: __init__.py  __main__.py  antenna.py  asimov.py  bilby.py  distribution.py  filters.py  injection.py  mattermost.py  mdctools.py  minke_template.yml  noise.py  sources.py  types.py  utils.py
minke/models/: __init__.py  bursts.py  cbc.py  lalburst.py  lalnoise.py  lalsimulation.py
notebooks/: Sine Gaussians.ipynb  Supernovae.ipynb  The great minke supernova bug-hunt.ipynb  Untitled.ipynb  test.xml
scripts/: make-hw-frames.py  measure_snr.py  xml-report.py
tests/: test_injection.py  test_minke.py  test_minke_distributions.py  test_minki.py  test_noise.py  test_sources.py
tests/data/: README  adi_test.mat  ott_test.dat.dec
tests/models/: test_lalburst.py
